--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,9 +2,9 @@ name: Build and Deploy to Sandbox
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main, develop]
   pull_request:
-    branches: [ main ]
+    branches: [ main, develop]
     
 jobs:
   build:
